# lioncoin

./: COPYING  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  configure.ac  dsjtsrydys
contrib/: README.md  lioncoin-qt.pro  lioncoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  lioncoin-qt.desktop  lioncoin-qt.install  lioncoin-qt.lintian-overrides  lioncoin-qt.protocol  lioncoind.bash-completion  lioncoind.examples  lioncoind.install  lioncoind.lintian-overrides  lioncoind.manpages  rules  watch
contrib/debian/examples/: lioncoin.conf
contrib/debian/manpages/: lioncoin-qt.1  lioncoin.conf.5  lioncoind.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md
qa/pull-tester/: build-tests.sh  build-tests.sh.in  pull-tester.py  pull-tester.sh  run-lioncoind-for-test.sh  run-lioncoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi  setup.nsi.in  ui.rc
share/certs/: LioncoinFoundation_Apple_Cert.pem  LioncoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: lioncoin128.xpm  lioncoin16.xpm  lioncoin256.xpm  lioncoin32.xpm  lioncoin64.xpm
share/qt/: Info.plist  Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile  Makefile.am  Makefile.in  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  lioncoin-cli-res.rc  (+52 more)
src/json/: json_spirit_value.h
src/m4/: lioncoin_find_bdb48.m4  lioncoin_qt.m4  lioncoin_subdir_to_include.m4
src/qt/: Makefile  Makefile.am  Makefile.in  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  lioncoin.cpp  lioncoin.qrc  lioncoinaddressvalidator.cpp  lioncoinaddressvalidator.h  lioncoinamountfield.cpp  lioncoinamountfield.h  lioncoingui.cpp  lioncoingui.h  lioncoinstrings.cpp  lioncoinunits.cpp  lioncoinunits.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: lioncoin_ach.ts  lioncoin_af_ZA.ts  lioncoin_ar.ts  lioncoin_be_BY.ts  lioncoin_bs.ts  lioncoin_ca.ts  lioncoin_ca@valencia.ts  lioncoin_ca_ES.ts  lioncoin_cmn.ts  lioncoin_cy.ts  lioncoin_de.ts  lioncoin_de_AT.ts  lioncoin_en.ts  lioncoin_eo.ts  lioncoin_es.ts  lioncoin_es_CL.ts  lioncoin_es_DO.ts  lioncoin_es_MX.ts  lioncoin_es_UY.ts  lioncoin_et.ts  lioncoin_eu_ES.ts  lioncoin_fa_IR.ts  lioncoin_fi.ts  lioncoin_fr.ts  lioncoin_fr_CA.ts  lioncoin_gl.ts  lioncoin_gu_IN.ts  lioncoin_hr.ts  lioncoin_hu.ts  lioncoin_id_ID.ts  lioncoin_it.ts  lioncoin_kk_KZ.ts  lioncoin_ky.ts  lioncoin_la.ts  lioncoin_lt.ts  lioncoin_lv_LV.ts  lioncoin_ms_MY.ts  lioncoin_nl.ts  lioncoin_pam.ts  lioncoin_pt_BR.ts  (+13 more)
src/qt/res/: lioncoin-qt-res.rc
src/qt/res/icons/: lioncoin.icns
src/qt/test/: Makefile  Makefile.am  Makefile.in  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile  Makefile.am  Makefile.in  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_lioncoin.cpp  util_tests.cpp
